# demotrack_hip

./: .gitignore  CMakeLists.txt  README.md  Settings.cmake.original  beam_elements.h  beamfields.h  config.h.template  definitions.h  demo01.cpp  demo01.cu  demo02.cpp  demo02.cu  fodo_lattice.h  lattice.h  particle.h  run_cmd.sh  tun_param.sh
include/: beam_elements.h  beamfields.h  definitions.h  demo01_sc0.h  demo01_sc1.h  demo02_sc0.h  demo02_sc1.h  particle.h  utils.h
src/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  compare_particle_data.cpp  create_particle_data.cpp
